<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/android_background_2"
    tools:context=".views.activity.DetailActivity">


    <ProgressBar
        android:id="@+id/detailPB"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"
        android:contentDescription="@string/toggle_favorite"
        android:src="@drawable/baseline_favorite_border_24"
        style="@style/floating_button"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shareFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"
        android:contentDescription="@string/share"
        android:src="@drawable/baseline_share_24"
        style="@style/floating_button"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:contentDescription="@string/avatar_image"
        android:id="@+id/avatarDetailIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        style="@style/list_text"
        android:id="@+id/nameDetailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/avatarDetailIv"
        app:layout_constraintTop_toTopOf="@+id/avatarDetailIv" />

    <TextView
        style="@style/list_text"
        android:id="@+id/githubIdDetailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/github_id"
        app:layout_constraintStart_toEndOf="@+id/avatarDetailIv"
        app:layout_constraintTop_toBottomOf="@+id/nameDetailTv" />

    <TextView
        style="@style/list_text"
        android:id="@+id/sumFollowerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="51dp"
        android:text="@string/follower"
        app:layout_constraintBottom_toTopOf="@+id/detailTL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarDetailIv" />

    <TextView
        style="@style/list_text"
        android:id="@+id/sumFollowingTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="51dp"
        android:text="@string/following"
        app:layout_constraintBottom_toTopOf="@+id/detailTL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        style="@style/tabs_layout"
        android:id="@+id/detailTL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/sumFollowerTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        style="@style/viewpager_background"
        android:id="@+id/detailVp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/detailTL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>